# Xener

./: .gitignore  Cargo.toml  config.yaml  index.html  results.csv
benches/: server_benchmark.rs
src/: error.rs  logging.rs  main.rs
src/config/: mod.rs
src/http/: mod.rs  request.rs  response.rs
src/server/: connection.rs  connection_pool.rs  mod.rs  static_handler.rs  tests.rs  thread_pool.rs
